# AGENT-GLOBAL-BASE

./: .cursorignore  .geminiignore  .gitattributes  .gitignore  .kiroignore  .mcp.json  .prettierignore  .prettierrc  .qwenignore  .tongyiignore  AGENTS.md  CLAUDE.md  GEMINI.md  LINGMA.md  QWEN.md  README.md  opencode.json
.claude/: .gitignore  settings.json  settings.local.json  settings.powershell.json
.claude/agents/: cc00-implementation-assistant.md  dr-amara-osei-mensah-cto-l.md  dr-evelyn-hartwell-chro.md  dr-kenji-nakamura-cto.md  dr-priya-mehta-cio.md  dr-sarah-chen-cso.md  kofi-asante-mensah-android-lead.md  marcus-tran-yoshida-cpo.md  mei-ling-johansson-cross-platform-lead.md  multi-agent-orchestrator.md  organizational-agent-activator.md  pipeline-stage-executor.md  priscilla-oduya-test-lead.md  rafael-okonkwo-software-architect.md  seo-yeon-park-ios-lead.md  yuki-tanaka-chen-cdo.md
.claude/commands/: rag-sync.md
.claude/hooks/: .gitignore  context-budget-alert.ps1  context-budget-alert.sh  git-line-encoding-validator.ps1  git-line-encoding-validator.sh  harness-error-boundary-monitor.ps1  harness-error-boundary-monitor.sh  harness-rate-limiter-turn-reset.ps1  harness-rate-limiter-turn-reset.sh  harness-tool-rate-limiter.ps1  harness-tool-rate-limiter.sh  lint-on-save.ps1  multi-agent-branch-naming-guard.ps1  multi-agent-branch-naming-guard.sh  multi-agent-commit-format-guard.ps1  multi-agent-commit-format-guard.sh  pipeline-context-injector.ps1  pipeline-context-injector.sh  prettier-on-save.ps1  prompt-gate-clear.ps1  prompt-gate-clear.sh  prompt-gate-enforcer.ps1  prompt-gate-enforcer.sh  prompt-optimizer.ps1  prompt-optimizer.sh  prompt-quality-gate.ps1  prompt-quality-gate.sh  prompt-write-guard.ps1  prompt-write-guard.sh  rag-index-sync.ps1  rag-index-sync.sh  retrieval-augmented-generation-freshness-flag.ps1  retrieval-augmented-generation-freshness-flag.sh  test-on-code-change.ps1  (+3 more)
.claude/mcp-servers/cc00-tools/: README.md  pyproject.toml  server.py
.claude/mcp-servers/pipeline-automation/: README.md  pyproject.toml  server.py
.claude/mcp-servers/workspace-knowledge/: .gitignore  README.md  build_faiss.py  pyproject.toml  rag-sync-state.json  server.py
.claude/mcp-servers/workspace-knowledge/rag-system/: check_rag_status.py  rag-sync-state.json
.claude/mcp-servers/workspace-knowledge/tests/rag_eval/: mrr_query_set.json  phase1_smoke_tests.py
.cursor/: README.md
.gemini/: ECOSYSTEM_SPEC.md  README.md  settings.json
.github/: copilot-instructions.md
.kiro/: ECOSYSTEM_SPEC.md  README.md
.kiro/mcp-servers/cc00-tools/: README.md  pyproject.toml  server.py
.kiro/mcp-servers/git-worktree-manager/: README.md  pyproject.toml  server.py
.lingma/: README.md  settings.json
.opencode/: README.md
.qwen/: README.md  settings.json
academic-neural-unit-00/: CLAUDE.md  README.md
company/: CLAUDE.md
core-component-00/: CLAUDE.md  README.md  agent-systems-engineering.md
core-component-00/mcp-servers/agent-memory/: .gitignore  README.md  pyproject.toml  server.py
studio/: CLAUDE.md  README.md
telescope/: CLAUDE.md  README.md
templates/: README.md
(+3939 files in other folders)
