[project]
name = "pipeline-automation-server"
version = "1.0.0"
description = "Pipeline stage automation tools for company and studio pipelines"
authors = [{ name = "AGENT-GLOBAL-BASE Workspace", email = "workspace@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.scripts]
pipeline-automation-server = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
