[project]
name = "workspace-rag-server"
version = "1.0.0"
description = "RAG server for workspace documentation search and retrieval"
authors = [{ name = "AGENT-GLOBAL-BASE Workspace", email = "workspace@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.scripts]
workspace-rag-server = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
